Functional recent searches display

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                 <button type="submit" id="submit-city"
                     class="button-success u-center-block u-full-width">Search</button>
             </form>
+            <div id="cities-list">
+                <ul id="searched-cities-list">
+
+                </ul>
+            </div>
         </div>
         <div class="card-container md-twelve lg-nine columns">
                 <div class="row">
